# pagination_detection

./: .gitignore  main.py  pagination_detector.py  pyproject.toml
pagination/: __init__.py  __main__.py  analyse.py  captcha.py  cli.py  constants.py  crawler.py  dependencies.py  detection.py  fetching.py  helpers.py  parsing.py
