[project]
name = "pagination-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "2captcha-python>=2.0.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "requests>=2.33.1",
]
